add SpriteManager to handle logic for creating sprites

--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -179,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App\Components\include\Animation.h" />
+    <ClInclude Include="App\Managers\include\SpriteManager.h" />
     <ClInclude Include="App\Utilities\include\app.h" />
     <ClInclude Include="App\Utilities\include\AppSettings.h" />
     <ClInclude Include="App\Utilities\include\main.h" />
@@ -201,6 +202,7 @@
     <ClInclude Include="App\Systems\include\MovementHandler.h" />
     <ClInclude Include="App\Utilities\include\Helper.h" />
     <ClInclude Include="App\Systems\include\ScreenHandler.h" />
+    <ClInclude Include="App\Managers\SpriteManager.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="App\Components\include\Tag.h" />
@@ -237,6 +239,7 @@
     <ClCompile Include="App\Systems\src\MovementHandler.cpp" />
     <ClCompile Include="App\Utilities\src\Helper.cpp" />
     <ClCompile Include="App\Systems\src\ScreenHandler.cpp" />
+    <ClCompile Include="App\Managers\src\SpriteManager.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
