clean code - set solution-wide include path and remove ../

--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -121,6 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>$(ProjectDir)\App</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
