clean code - put floating numbers into variables

--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -188,7 +188,7 @@
     <ClInclude Include="App\Utilities\include\SimpleSound.h" />
     <ClInclude Include="App\Utilities\include\SimpleSprite.h" />
     <ClInclude Include="App\Components\include\Collider.h" />
-    <ClInclude Include="App\Components\include\Direction.h" />
+    <ClInclude Include="App\Components\include\BounceDirection.h" />
     <ClInclude Include="App\Components\include\Health.h" />
     <ClInclude Include="App\Managers\include\EntityManager.h" />
     <ClInclude Include="App\Components\include\Button.h" />
@@ -228,7 +228,7 @@
     <ClCompile Include="App\Utilities\src\SimpleSound.cpp" />
     <ClCompile Include="App\Utilities\src\SimpleSprite.cpp" />
     <ClCompile Include="App\Components\src\Collider.cpp" />
-    <ClCompile Include="App\Components\src\Direction.cpp" />
+    <ClCompile Include="App\Components\src\BounceDirection.cpp" />
     <ClCompile Include="App\Managers\src\EntityManager.cpp" />
     <ClCompile Include="App\Components\src\Button.cpp" />
     <ClCompile Include="App\Components\src\Component.cpp" />
