--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="App\Components\src\Transform.cpp" />
     <ClCompile Include="App\Components\src\Collider.cpp" />
     <ClCompile Include="App\Components\src\Velocity.cpp" />
-    <ClCompile Include="App\Components\src\Direction.cpp" />
+    <ClCompile Include="App\Components\src\BounceDirection.cpp" />
     <ClCompile Include="App\Components\src\Health.cpp" />
     <ClCompile Include="App\Components\src\Button.cpp" />
     <ClCompile Include="App\Systems\src\RenderingHandler.cpp" />
@@ -68,7 +68,7 @@
     <ClInclude Include="App\Components\include\Transform.h" />
     <ClInclude Include="App\Components\include\Collider.h" />
     <ClInclude Include="App\Components\include\Velocity.h" />
-    <ClInclude Include="App\Components\include\Direction.h" />
+    <ClInclude Include="App\Components\include\BounceDirection.h" />
     <ClInclude Include="App\Components\include\Health.h" />
     <ClInclude Include="App\Components\include\Button.h" />
     <ClInclude Include="App\Systems\include\RenderingHandler.h" />
