--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -47,6 +47,8 @@
     <ClCompile Include="App\Components\src\Timer.cpp" />
     <ClCompile Include="App\Utilities\src\Enums.cpp" />
     <ClCompile Include="App\Components\src\EntityId.cpp" />
+    <ClCompile Include="App\Systems\src\EntityHandler.cpp" />
+    <ClCompile Include="App\Systems\src\SystemFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -99,6 +101,8 @@
     <ClInclude Include="App\Components\include\Timer.h" />
     <ClInclude Include="App\Utilities\include\Enums.h" />
     <ClInclude Include="App\Components\include\EntityId.h" />
+    <ClInclude Include="App\Systems\include\EntityHandler.h" />
+    <ClInclude Include="App\Systems\include\SystemFactory.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NextAPI">
