--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -209,6 +209,8 @@
     <ClInclude Include="App\Utilities\include\Enums.h" />
     <ClInclude Include="App\Components\include\EntityId.h" />
     <ClInclude Include="App\Systems\include\EntityHandler.h" />
+    <ClInclude Include="App\Components\include\Cooldown.h" />
+    <ClInclude Include="App\Systems\include\CooldownHandler.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="App\Components\include\Tag.h" />
@@ -236,6 +238,8 @@
     <ClCompile Include="App\Utilities\src\Enums.cpp" />
     <ClCompile Include="App\Components\src\EntityId.cpp" />
     <ClCompile Include="App\Systems\src\EntityHandler.cpp" />
+    <ClCompile Include="App\Components\src\Cooldown.cpp" />
+    <ClCompile Include="App\Systems\src\CooldownHandler.cpp" />
     <ClCompile Include="GameTest.cpp" />
     <ClCompile Include="App\Components\src\Health.cpp" />
     <ClCompile Include="App\Systems\src\CollisionHandler.cpp" />
