--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -50,6 +50,7 @@
     <ClCompile Include="App\Components\src\Screen.cpp" />
     <ClCompile Include="App\Systems\src\TitleHandler.cpp" />
     <ClCompile Include="App\Managers\src\SpriteManager.cpp" />
+    <ClCompile Include="App\Managers\src\GameManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -107,6 +108,7 @@
     <ClInclude Include="App\Utilities\include\DirectSound.h" />
     <ClInclude Include="App\Utilities\include\mydirectsound.h" />
     <ClInclude Include="App\Managers\include\SpriteManager.h" />
+    <ClInclude Include="App\Managers\include\GameManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NextAPI">
