--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -287,6 +287,7 @@
     <Image Include="Data\SpriteSheets\ReloadingCircle.png" />
     <Image Include="Data\Sprites\AmmoEmpty.png" />
     <Image Include="Data\Sprites\AmmoFilled.png" />
+    <Image Include="Data\Sprites\BackButton.png" />
     <Image Include="Data\Sprites\Bullet.bmp" />
     <Image Include="Data\Sprites\PlayButton.png" />
     <Image Include="Data\Sprites\Title.png" />
